Help pages load faster

--- a/header.html
+++ b/header.html
@@ -20,13 +20,13 @@
       <div data-target="game-servers" class="navbar-item has-dropdown">
         <a class="navbar-link">Game Servers</a>
         <div class="navbar-dropdown has-background-dark" id="game-servers">
-          <a class="navbar-item has-text-light" href="/game-servers/7-days-to-die"><img class="navbar-btn-img" src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo" width="20px" height="20px">7 Days to
+          <a class="navbar-item has-text-light" href="/game-servers/7-days-to-die"><img class="navbar-btn-img" src="/src/img/logo-7-days-to-die.png" alt="7 Days To Die Logo">7 Days to
             Die</a>
-          <a class="navbar-item has-text-light" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img" src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo" width="20px" height="20px">ARK: Survival Evolved</a>
-          <a class="navbar-item has-text-light" href="/game-servers/minecraft"><img class="navbar-btn-img" src="/src/img/logo-minecraft.png" alt="Minecraft Logo" width="20px" height="20px">Minecraft</a>
-          <a class="navbar-item has-text-light" href="/game-servers/project-zomboid"><img class="navbar-btn-img" src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo" width="20px" height="20px">Project
+          <a class="navbar-item has-text-light" href="/game-servers/ark-survival-evolved"><img class="navbar-btn-img" src="/src/img/logo-ark-survival-evolved.png" alt="ARK: Survival Evolved Logo">ARK: Survival Evolved</a>
+          <a class="navbar-item has-text-light" href="/game-servers/minecraft"><img class="navbar-btn-img" src="/src/img/logo-minecraft.png" alt="Minecraft Logo">Minecraft</a>
+          <a class="navbar-item has-text-light" href="/game-servers/project-zomboid"><img class="navbar-btn-img" src="/src/img/logo-project-zomboid.png" alt="Project Zomboid Logo">Project
             Zomboid</a>
-          <a class="navbar-item has-text-light" href="/game-servers/terraria"><img class="navbar-btn-img" src="/src/img/logo-terraria.png" alt="Terraria Logo" width="20px" height="20px">Terraria</a>
+          <a class="navbar-item has-text-light" href="/game-servers/terraria"><img class="navbar-btn-img" src="/src/img/logo-terraria.png" alt="Terraria Logo">Terraria</a>
           <hr class="navbar-divider">
           <a class="navbar-item has-text-light" href="/contact-staff">Suggest a Server Type</a>
         </div>
