--- a/game-servers/ark-survival-evolved/index.html
+++ b/game-servers/ark-survival-evolved/index.html
@@ -10,7 +10,7 @@
   <link href="/src/css/bulma.css" rel="stylesheet">
   <link href="/src/css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="/src/js/imports.js"></script>
+  <script rel="preload" src="/src/js/imports.js"></script>
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
 
