--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="/src/css/bulma.css" rel="stylesheet" media>
   <link href="/src/css/style.css" rel="stylesheet" media>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="/src/js/imports.js"></script>
+  <script rel="preload" src="/src/js/imports.js"></script>
   <link href="/src/img/m_favicon_white.png" rel="icon" type="image/png">
 </head>
 
