--- a/header.html
+++ b/header.html
@@ -39,9 +39,9 @@
         <div class="buttons">
           <a class="button is-discord" href="https://discord.gg/7XtKkGs" target="_blank"><img class="navbar-btn-img" src="/src/img/discord-logo.png" alt="Discord Logo">Discord</a>
           </a>
-          <a class="button is-dark" href="/log-in">
+          <!--<a class="button is-dark" href="/log-in">
             Log in
-          </a>
+          </a>-->
         </div>
       </div>
     </div>
