--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,7 @@
 <footer class="footer has-background-grey-dark has-text-light bottom-pinned">
 	<div class="content has-text-centered">
 		<p>
-			<strong>Website</strong> created with <i class="fa-solid fa-heart"></i> by <a href="https://chcmatt.com" target="_blank">CHCMATT</a> &#8226; <strong>Bulma</strong> by <a href="https://jgthms.com" target="_blank">Jeremy
-				Thomas</a> &#8226; <strong>Source code</strong> is licensed <a href="http://opensource.org/licenses/mit-license.php" target="_blank">MIT</a>.<br \>
+			<strong>Website</strong> created with <i class="fa-solid fa-heart"></i> by <a href="https://chcmatt.com" target="_blank">CHCMATT</a> &#8226; <strong>Framework</strong> by <a href="https://bulma.io" target="_blank">Bulma</a> &#8226; <strong>Source code</strong> licensed under <a href="http://opensource.org/licenses/mit-license.php" target="_blank">MIT</a>.<br \>
 		</p>
 	</div>
 </footer>
